--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Movies#index</h1>
-<p>Find me in app/views/movies/index.html.erb</p>
-
-<% @movies.each do |movie| %>
-	<div class="column">
-		<div class="block">
-			<h1><%= movie.title %></h1>
-			<div class="thumb" style="background-image: <%= movie.thumburl %>;"></div>
+<%= render 'shared/header' %>
+<div id="main">	
+	<% @movies.each do |movie| %>
+		<div class="column">
+			<div class="block">
+				<h1><%= movie.title %></h1>
+				<div class="thumb" style="background-image: url('assets/thumbs_movies/<%= movie.thumburl %>');"></div>
+			</div>
 		</div>
-	</div>
-<% end %>
+	<% end %>
+</div>
