--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Movies#new</h1>
-<p>Find me in app/views/movies/new.html.erb</p>
-
-<%= render 'form' %>
+<div id="main">
+	<h1 class="main">Create New Movie</h1>
+	<div class="block">
+		<%= render 'form' %>
+	</div>
+</div>
