--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -1,8 +1,69 @@
-// Place all the styles related to the Movies controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
+@mixin clear { &:after { content: "."; display: block; height:0; clear: both; visibility: hidden; }}
 
 * {
+	border: 0;
+	font-family: Helvetica, Arial, sans-serif;
 	margin: 0;
+	padding: 0;
+}
+
+#main {
+	@include clear;
+	padding: 75px 12.5px 0 12.5px;
+}
+
+h1.main {
+	font-size: 24px;
+	margin: 0 12.5px 25px 12.5px;
+}
+
+.column {
+	float: left;
+	width: 16.66667%;
+}
+.block {
+	margin: 0 12.5px 25px 12.5px;
+	h1 {
+		color: #AEAEAE;
+		display: block;
+		font-size: 10px;
+		font-weight: normal;
+		height: 20px;
+		letter-spacing: 0.5px;
+		margin: 0 0 5px 0;
+		overflow: hidden;
+		text-align: center;
+	}
+	.thumb {
+		background-position: 50%;
+		background-size: 100%;
+		display: block;
+		height: 0;
+		max-width: 100%;
+		padding-bottom: 147%;
+	}
+}
+
+form {
+	fieldset {
+		margin: 0 0 20px 0;
+	}
+	label {
+		display: block;
+		margin: 0 0 5px 0;
+	}
+	input[type="text"] {
+		border: 1px solid #AEAEAE;
+		font-size: 14px;
+		height: 20px;
+		padding: 5px 10px;
+		width: 250px;
+	}
+	input[type="submit"] {
+		background-color: #4094bf;
+		color: #FFFFFF;
+		display: block;
+		font-size: 12px;
+		padding: 10px 20px;
+	}
 }
