--- a/app/views/movies/delete.html.erb
+++ b/app/views/movies/delete.html.erb
@@ -4,6 +4,6 @@
 <h1><%= @movie.title %></h1>
 <h2>Directed by: <%= @movie.director %>
 
-<%= link_to "Delete", movies_delete_path(:id => @movie.id) %>
+<%= link_to 'Delete', movies_delete_path(:id => @movie.id) %>
 <%= link_to 'Edit', edit_movie_path(@movie)%> |
 <%= link_to 'Back', movies_path %>
