--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -3,6 +3,9 @@
 
 <h1><%= @movie.title %></h1>
 <h2>Directed by: <%= @movie.director %>
+<h3>Released: <%= @movie.year %></h3>
+<h4>Genre: <%= @movie.genre %></h4>
+
 
 <%= link_to 'Edit', edit_movie_path(@movie)%> |
 <%= link_to 'Back', movies_path %>
