--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -7,41 +7,94 @@
 	padding: 0;
 }
 
+.content {
+	@include clear;
+	margin: 0 auto;
+	max-width: 960px;
+	padding: 0 10px;
+}
+
+header {
+	background-color: #f4f4f4;
+	border-bottom: 5px solid #EAEAEA;
+	@include clear;
+	height: 50px;
+	.logo {
+		background-image: image-url("logo_template.png");
+		background-size: 85px;
+		float: left;
+		height: 50px;
+		margin: 0 10px 0 0;
+		width: 85px;
+	}
+}
+#searchBar {
+	@include clear;
+	margin: 0 0 20px 0;
+	.content {
+		padding: 20px 10px 0 10px;
+	}
+	form {
+		float: left;
+		width: 100%;
+		input[type="text"] {
+			border: 1px solid #d6d6d6;
+			border-right: none;
+			float: left;
+			font-size: 24px;
+			height: 38px;
+			padding: 5px 10px;
+			width: calc(60% - 80px);
+		}
+		input[type="submit"] {
+			background-color: #3d97c4;
+			background-image: image_url("icon_search.png");
+			background-position: 50%;
+			background-repeat: no-repeat;
+			background-size: 25px;
+			display: block;
+			float: left;
+			height: 50px;
+			padding: 0;
+			width: 50px;
+			text-indent: -50000px;
+		}
+	}
+}
+.block { margin: 0 12.5px 25px 12.5px; }
 #main {
 	@include clear;
-	padding: 75px 12.5px 0 12.5px;
+	padding: 0 12.5px 0 12.5px;
+	.movie.column {
+		float: left;
+		width: 20%;
+		.block {
+			h1 {
+				color: #AEAEAE;
+				display: block;
+				font-size: 10px;
+				font-weight: normal;
+				height: 20px;
+				letter-spacing: 0.5px;
+				margin: 0 0 5px 0;
+				overflow: hidden;
+				text-align: center;
+			}
+			.thumb {
+				background-position: 50%;
+				background-size: 100%;
+				display: block;
+				height: 0;
+				max-width: 100%;
+				padding-bottom: 147%;
+			}
+		}
+	}
 }
 
 h1.main {
 	font-size: 24px;
 	margin: 0 12.5px 25px 12.5px;
-}
-
-.column {
-	float: left;
-	width: 16.66667%;
-}
-.block {
-	margin: 0 12.5px 25px 12.5px;
-	h1 {
-		color: #AEAEAE;
-		display: block;
-		font-size: 10px;
-		font-weight: normal;
-		height: 20px;
-		letter-spacing: 0.5px;
-		margin: 0 0 5px 0;
-		overflow: hidden;
-		text-align: center;
-	}
-	.thumb {
-		background-position: 50%;
-		background-size: 100%;
-		display: block;
-		height: 0;
-		max-width: 100%;
-		padding-bottom: 147%;
-	}
 }
 
 form {
