--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,6 +1,6 @@
 <div id="main">
 	<h1 class="main">Create New Movie</h1>
 	<div class="block">
-		<%= render 'form' %>
+		<%= render 'shared/form' %>
 	</div>
 </div>
