--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Movies#show</h1>
-<p>Find me in app/views/movies/show.html.erb</p>
+<%= render 'shared/header' %>
+<%= render 'shared/search' %>
 
 <h1><%= @movie.title %></h1>
 <h2>Directed by: <%= @movie.director %>
