--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -5,6 +5,7 @@
 <h2>Directed by: <%= @movie.director %>
 <h3>Released: <%= @movie.year %></h3>
 <h4>Genre: <%= @movie.genre %></h4>
+<h5>Rating: <%= @movie.rating %></h5>
 
 
 <%= link_to 'Edit', edit_movie_path(@movie)%> |
