--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,10 +1,4 @@
-<section id="searchBar">
-	<div class="content">
-		<%= form_tag movies_path, :method => 'get' do %>
-			<div class="block">
-				<%= text_field_tag :search, params[:search] %>
-				<%= submit_tag "search", :name => nil %>
-			</div>
-		<% end %>
-	</div>
-</section>
+<%= form_tag movies_path, :class => 'search', :method => 'get' do %>
+	<%= text_field_tag :search, params[:search] %>
+	<%= submit_tag "search", :name => nil %>
+<% end %>
