added rating to movie model

--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -19,6 +19,10 @@
 		<%= f.label :genre %>
 		<%= f.text_field :genre %>
 	</fieldset>
+	<fieldset>
+		<%= f.label :rating %>
+		<%= f.text_field :rating %>
+	</fieldset>
 	<fieldset class="actions">
 		<%= f.submit %>
 	</fieldset>
