--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,12 +1,27 @@
 <%= render 'shared/header' %>
-<%= render 'shared/search' %>
 
-<h1><%= @movie.title %></h1>
+<section id="hero">
+	<div class="overlay">
+		<div id="show">
+			<aside>
+				<div class="block">
+					<%= image_tag "thumbs_movies/" + @movie.thumburl %>
+				</div>
+			</aside>
+			<article>
+				<div class="block">
+					<h1 class="title"><%= @movie.title %></h1>
+				</div>
+			</article>
+		</div>
+	</div>
+	<%= image_tag "thumbs_movies/" + @movie.thumburl %>
+</section>
+
+
 <h2>Directed by: <%= @movie.director %>
 <h3>Released: <%= @movie.year %></h3>
 <h4>Genre: <%= @movie.genre %></h4>
 <h5>Rating: <%= @movie.rating %></h5>
-
-
 <%= link_to 'Edit', edit_movie_path(@movie)%> |
 <%= link_to 'Back', movies_path %>
