--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,4 +1,4 @@
 <%= form_tag movies_path, :class => 'search', :method => 'get' do %>
-	<%= text_field_tag :search, params[:search] %>
+	<%= text_field_tag :search, params[:search], :placeholder => "Search for Movies..." %>
 	<%= submit_tag "search", :name => nil %>
 <% end %>
