--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -118,25 +118,19 @@ header {
 
 
 #hero {
-	height: 150px;
-	position: relative;
-	overflow: hidden;
-	.overlay {
-		@include clear;
-		background-color: rgba(200,200,200,0.75);
-		height: 100%;
-		position: absolute;
-		width: 100%;
-		z-index: 2;
-	}
-	> img {
-		display: block;
-		margin: -325px auto 0 auto;
-		position: relative;
-		width: 1000px;
-		@media screen and (min-width: 1000px) {
-			width: 120%;
-		}
+	background-image: image_url("bg_rec.png");
+	background-color: #AEAEAE;
+	background-size: 25px;
+	box-shadow: inset 0 -10px 0 rgba(0,0,0,0.1);
+	height: 240px;
+	h1 {
+		color: #EAEAEA;
+		font-size: 35px;
+		font-weight: normal;
+		height: 40px;
+		letter-spacing: 2px;
+		padding: 100px 20px;
+		text-align: center;
 	}
 }
 #show {
@@ -147,14 +141,14 @@ header {
 	z-index: 3;
 	aside {
 		float: left;
-		width: 33.333334%;
+		width: 25%;
 		 img {
 			width: 100%;
 		}
 	}
 	article {
 		float: left;
-		width: 66.666667%;
+		width: 75%;
 		h1 {
 			color: #484848;
 			font-weight: normal;
