--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -95,21 +95,60 @@ header {
 				max-width: 100%;
 				padding-bottom: 147%;
 				position: relative;
-				a {
-					background-color: rgba(0,0,0,0.80);
-					background-image: image_url("icon_arrow_goto_movie.png");
-					background-position: 50%;
-					background-repeat: no-repeat;
-					background-size: 50px;
+				.overlay {
+					background-color: rgba(0,0,0,0.8);
 					height: 100%;
-					opacity: 0;
 					position: absolute;
-					transition: opacity 0.25s ease-in-out;
 					width: 100%;
-					z-index: 1;
-					&:hover {
-						opacity: 1;
+					opacity: 0;
+					transition: opacity 0.25s ease-in-out;
+					.actions {
+						height: 120px;
+						margin: 0 auto;
+						position: relative;
+						top: calc(50% - 65px);
+						width: 120px;
+						a {
+							background-position: 50%;
+							background-size: 50px;
+							border: 2px solid #EAEAEA;
+							border-radius: 100px;
+							cursor: pointer;
+							float: left;
+							height: 46px;
+							transition: background-image 0.5s ease-in-out, background-color 0.5s ease-in-out;
+							width: 46px;
+							&:hover { border: 2px solid #EAEAEA; }
+							&:nth-child(odd) { margin: 0 20px 0 0; }
+							&:first-child { margin: 0 20px 20px 0; }
+							&:last-child { margin: 0  0 20px 0; }
+							&.want_to_see { background-image: image_url('action_icons/icon_want_to_see_default@2x.png');
+								&:hover { background-image: image_url('action_icons/icon_want_to_see_hover@2x.png'); }
+							}
+							&.favorite { background-image: image_url('action_icons/icon_favorite_default@2x.png');
+								&:hover { background-image: image_url('action_icons/icon_favorite_hover@2x.png'); }
+								&.active { background-image: image_url('action_icons/icon_favorite_active@2x.png'); background-color: #EAEAEA; }
+							}
+							&.play_trailer { background-image: image_url('action_icons/icon_play_trailer_default@2x.png');
+								&:hover { background-image: image_url('action_icons/icon_play_trailer_hover@2x.png'); }
+							}
+							&.more_info { background-image: image_url('action_icons/icon_more_info_default@2x.png');
+								&:hover { background-image: image_url('action_icons/icon_more_info_hover@2x.png'); }
+							}
+						}
 					}
+					.message {
+						bottom: 10%;
+						color: #FFFFFF;
+						font-size: 12px;
+						letter-spacing: 1px;
+						position: absolute;
+						text-align: center;
+						width: 100%;
+					}
+				}
+				&:hover {
+					.overlay { opacity: 1; }
 				}
 			}
 		}
